[gd_scene load_steps=16 format=2]

[ext_resource path="res://Enemies/Turret.gd" type="Script" id=1]
[ext_resource path="res://Enemies/MechParts/part2.png" type="Texture" id=2]
[ext_resource path="res://Enemies/scan_light.png" type="Texture" id=3]
[ext_resource path="res://Enemies/MechParts/body4.png" type="Texture" id=4]
[ext_resource path="res://Enemies/MechParts/canon5.png" type="Texture" id=5]
[ext_resource path="res://Enemies/MechParts/part1.png" type="Texture" id=6]
[ext_resource path="res://Enemies/MechParts/part3.png" type="Texture" id=7]
[ext_resource path="res://Enemies/Gun.gd" type="Script" id=8]

[sub_resource type="CapsuleShape2D" id=1]
radius = 13.1802

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( -100, -110, 0, 0, 100, -110, 45, -150, -45, -150 )

[sub_resource type="CircleShape2D" id=3]
radius = 177.612

[sub_resource type="Animation" id=4]
resource_name = "Dissable"
length = 5.0
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "sleep" ],
"method": "change_job"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "Guard"
length = 9.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Head:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4.5, 9 ),
"transitions": PoolRealArray( -2, -2, -2 ),
"update": 3,
"values": [ 0.0, 360.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Head/ScanLight:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Hunt"
length = 0.5
loop = true
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "pew_pew"
}, {
"args": [  ],
"method": "update_target"
} ]
}

[sub_resource type="Animation" id=7]
resource_name = "Sleep"
length = 3.0
loop = true
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "scan_for_player"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Head/ScanLight:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.7, 2.9, 3 ),
"transitions": PoolRealArray( 1, 1, 2, 0.5 ),
"update": 0,
"values": [ 0.0, 0.0, 2.0, 0.0 ]
}

[node name="Turret-A" type="Node2D"]
script = ExtResource( 1 )

[node name="Base" type="RigidBody2D" parent="."]
collision_layer = 32
collision_mask = 424
gravity_scale = 0.0

[node name="part1" type="Sprite" parent="Base"]
position = Vector2( 2.20546, 5.99371 )
texture = ExtResource( 6 )

[node name="body4" type="Sprite" parent="Base"]
position = Vector2( 0.281021, -8.83136 )
texture = ExtResource( 4 )

[node name="part2" type="Sprite" parent="Base"]
position = Vector2( -9.26612, 6.21329 )
texture = ExtResource( 2 )

[node name="part3" type="Sprite" parent="Base"]
position = Vector2( 0.247536, 17.3621 )
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Base"]
shape = SubResource( 1 )

[node name="Head" type="Node2D" parent="."]

[node name="Gun" type="Sprite" parent="Head"]
position = Vector2( 0, -8 )
texture = ExtResource( 5 )
script = ExtResource( 8 )

[node name="Left" type="Position2D" parent="Head/Gun"]
position = Vector2( -7.08789, -15.8273 )

[node name="Right" type="Position2D" parent="Head/Gun"]
position = Vector2( 7.01434, -16.2984 )

[node name="ScanLight" type="Light2D" parent="Head"]
position = Vector2( -0.0273416, -5.63064 )
scale = Vector2( 1, 0.741281 )
texture = ExtResource( 3 )
offset = Vector2( 0, -120 )
texture_scale = 0.8
color = Color( 0.988235, 0, 0, 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="DetectionCone" type="Area2D" parent="Head"]
collision_layer = 0
collision_mask = 8
__meta__ = {
"_editor_description_": ""
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head/DetectionCone"]
shape = SubResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="TrackingRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="TrackingRange"]
shape = SubResource( 3 )
__meta__ = {
"_editor_description_": ""
}

[node name="JobPatterns" type="AnimationPlayer" parent="."]
anims/Dissable = SubResource( 4 )
anims/Guard = SubResource( 5 )
anims/Hunt = SubResource( 6 )
anims/Sleep = SubResource( 7 )
__meta__ = {
"_editor_description_": ""
}
[connection signal="body_entered" from="Head/DetectionCone" to="." method="_on_DetectionCone_body_entered"]
